# support_bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yaml  pyproject.toml  requirements.txt  run.py
migration/: env.py
migration/versions/: 461e42307204_initial.py  5704fb901008_initial.py
src/database/: connection.py  repository.py
src/database/models/: __init__.py  blocklist.py  support.py
src/handlers/: other.py  start.py  support.py  user.py
src/keyboards/: keyboards.py
src/misc/: modules.py
src/states/: states.py
